--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 
-# Created by https://www.gitignore.io/api/vapor,swift,xcode,swiftpm,cocoapods,objective-c,swiftpackagemanager
-# Edit at https://www.gitignore.io/?templates=vapor,swift,xcode,swiftpm,cocoapods,objective-c,swiftpackagemanager
+# Created by https://www.gitignore.io/api/vapor,xcode,swift,swiftpm,carthage,cocoapods,objective-c,swiftpackagemanager
+# Edit at https://www.gitignore.io/?templates=vapor,xcode,swift,swiftpm,carthage,cocoapods,objective-c,swiftpackagemanager
+
+### Carthage ###
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
+Carthage/Build
 
 ### CocoaPods ###
 ## CocoaPods GitIgnore Template
@@ -12,7 +20,6 @@ Pods/
 
 ### Objective-C ###
 # Xcode
-#
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
@@ -29,8 +36,6 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
-xcuserstate/
-xcuserdatad/
 
 ## Other
 *.moved-aside
@@ -55,7 +60,6 @@ xcuserdatad/
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
 
-Carthage/Build
 
 # fastlane
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
@@ -129,7 +133,7 @@ Dependencies/
 ### SwiftPackageManager ###
 Packages
 xcuserdata
-#*.xcodeproj
+*.xcodeproj
 
 
 ### SwiftPM ###
@@ -140,45 +144,25 @@ Config/secrets
 
 ### Vapor Patch ###
 
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
 
 ### Xcode ###
+# Xcode
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+## User settings
+
+## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
+
+## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 
 ## Xcode Patch
 *.xcodeproj/*
-*.xcodeproj/project.pbxproj
-*.xcodeproj/xcshareddata/
-*.xcworkspace/contents.xcworkspacedata
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 
-# End of https://www.gitignore.io/api/vapor,swift,xcode,swiftpm,cocoapods,objective-c,swiftpackagemanager
+# End of https://www.gitignore.io/api/vapor,xcode,swift,swiftpm,carthage,cocoapods,objective-c,swiftpackagemanager
