--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ playground.xcworkspace
 # Packages/
 # Package.pins
 # Package.resolved
-.build/
+# .build/
 # Add this line if you want to avoid checking in Xcode SPM integration.
 # .swiftpm/xcode
 
