--- a/.gitignore
+++ b/.gitignore
@@ -154,8 +154,8 @@ Temporary Items
 ### Xcode ###
 
 ## Xcode Patch
-*.xcodeproj/*
-*.xcodeproj/project.pbxproj
+#*.xcodeproj/*
+#*.xcodeproj/project.pbxproj
 *.xcodeproj/xcshareddata/
 *.xcworkspace/contents.xcworkspacedata
 /*.gcno
